# DyAuthReply

./: .env  .env.example  .gitignore  AGENTS.md  BROWSER_EXTENSION_FIX_SUMMARY.md  CLAUDE.md  COOKIE_ISOLATION_ANALYSIS.md  COOKIE_MANAGEMENT_IMPLEMENTATION_REPORT.md  DEPLOY.zh-CN.md  DIAGNOSIS_REPORT.md  IMPORT_ACCOUNT_TROUBLESHOOTING.md  MESSAGE_REPLY_IMPLEMENTATION.md  MESSAGE_REPLY_UI_IMPROVEMENTS.md  METHOD_NOT_ALLOWED_FIX.md  MIGRATION_DEPLOY.zh-CN.md  README.md  README.zh-CN.md  ROUTE_ORDER_FIX.md  build_and_copy_frontend.sh  docker-compose.deploy.yml  docker-compose.yml  launcher.spec  test_client_announcement_full.sh  zh-CN.md
.codex-tasks/20260424-douyin-login-stability/: PROGRESS.md  SPEC.md  TODO.csv
.github/: client-release-notes.md
.github/workflows/: client-build.yml  deploy.yml
.workflow/: MasterPipeline.yml
backend-django/: .dockerignore  .gitignore  Dockerfile  README.md  check_cookie_duplicates.py  db.sqlite3  db_init-old.json  db_init.json  diagnose_cookie_issue.sh  fetch_user_details.py  fix_client_db.py  manage.py  requirements.txt  start_client.py  start_douyin_worker.py  start_kuaishou_worker.py  start_scheduler.py  test_announcement_api.sh  test_check_credential.py  test_client_announcement.py  test_phase1_complete.py  test_phase1_fixes.py  update_account_avatars.py
backend-django/application/: asgi.py  celery.py  client_main.py  client_urls.py  main.py  settings.py  urls.py  (+1 more)
browser-extension/: BROWSER_EXTENSION_OPTIMIZATION.md  COOKIE_DIAGNOSIS_GUIDE.md  ENHANCED_ACCOUNT_SWITCH_DETECTION.md  FINAL_AVATAR_CACHE_FIX.md  PERSISTENT_FINGERPRINT_FIX.md  QUICK_REFERENCE.md  RELOAD_DEBUG_GUIDE.md  VERSION_1.4.0_FINAL.md  VERSION_1.5.0_DOMAIN_STANDARD.md
docs/: kuaishou-auto-reply-plan.md
dyauthreply-client/: .gitignore  PLAN.zh-CN.md  QUICKSTART.zh-CN.md  README.md  package.json
dyauthreply-client/desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
dyauthreply-client/desktop/src-tauri/capabilities/: default.json
dyauthreply-client/desktop/src-tauri/src/: lib.rs  main.rs
web/: .dockerignore  Dockerfile.dev  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+905 files in other folders)
