[package]
name = "dyauthreply"
version = "0.1.0"
description = "DyAuthReply Desktop Client"
authors = ["DyAuthReply"]
edition = "2021"

[lib]
name = "dyauthreply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
